assets/css/style.css
body {
    margin: 0px;
    font-family: 'Poppins';
    font-size: 12pt;
    display: flex;
    flex-direction: column;
    background-color: #F1EFEF;
    color: #534444;
}

/*Navigation Bar*/
.navbar {
    display: fixed;
    overflow: hidden;
    background-color: #F1EFEF;
    width: 100%;
    position: fixed;
}

/*Content*/
.content {
    padding-left: 14%;
    padding-right: 14%;
    padding-top: 250px;
}

h1, h2, h3 {
    font-family: 'Playfair Display';
    line-height:0.8;
}

h1 {
    margin-top: 15px;
    font-size: 36pt;
    text-shadow: 1px 1px 1px #e6d4d4;
    margin-bottom: 28px;
}

.light {
    font-weight:400;
    padding: 0;
    margin: 0;
    padding-right: 8px;
}

h2 {
    font-size: 20pt;
}

/* Background bubble for subheaders */
h3 span {
    background-color: #5a4e4e;
    border-radius: 20px;
    color: #F1EFEF;
    padding: 8px;
    padding-left: 18px;
    padding-right: 18px;
    text-decoration: none;
    font-weight: lighter;
    font-size: smaller;
}

#desc {
    font-size: large;
    margin: 0.1px;
    padding-bottom: 5px;
}

/* underlines current navbar page 
#curr-page {
    border-bottom: 1px solid #534444;
}
*/

/* Image text side by side */
.container {
    display: flex;
    align-items: center;
}

.home {
    display: flex;
    align-items: center;
}

#sather {

    border-radius: 200px;
}
/* home section */
.home {
    padding-bottom: 150px;
    padding-left: 40px;
}
   
/* all links */
a {
    text-decoration: none;
    color: #534444;
}

/* Links inside the navbar */
.navbar a {
    float: left;
    font-size: 12pt;
    color: #534444;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    
}

.nav-right {
    float: right;
}

.row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 15px;
    justify-content: center;
}

/* Create four equal columns that sits next to each other */
.column {
    flex: 25%;
    max-width: 26%;
    padding: 0 12px;
}

.skill-row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 15px;
    justify-content: center;
}

/* Create four equal columns that sits next to each other */
.skill-column {
    flex: 25%;
    max-width: 100%;
    padding: 0 12px;
}


.proj-column {
    flex: 10%;
    max-width: 100%;
    padding: 0 0;
}



/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .column {
    flex: 50%;
    max-width: 50%;
    }
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 1100px) {
    .skill-column {
    flex: 100%;
    max-width: 100%;
    }
}


/* SECTION PADDING */
.contact {
    margin-bottom: 50px;
}

.intro-text p {
    padding-left: 20px;
}

.home {
    position: relative;
    width: 460px;
    height: 230px;
}
.home-text {
    position: absolute;
    width: 100%;
    padding-top: 60px;
}

.home-img {
    z-index:-1;
    padding-left: 350px;
}

/* buttons for socials */
.sidexside {
    padding-left: 35px;
}

.button { 
    transition: all .2s ease-in-out; 
}
    
.button:hover { 
    transform: scale(1.12); 
}

/* The dropdown container 
.dropdown {
    float: left;
    overflow: hidden;
}

/* Dropdown button 
.dropdown .dropbtn {
    font-size: 16pt;
    border: none;
    outline: none;
    color: white;
    padding: 14px 16px;
    background-color: inherit;
    font-family: inherit; /* Important for vertical align on mobile phones 
    margin: 0; /* Important for vertical align on mobile phones 
}

/* Add a red background color to navbar links on hover
.navbar a:hover, .dropdown:hover .dropbtn {
    background-color: rgb(0, 0, 0);
}


/* Dropdown content (hidden by default) *
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

/* Links inside the dropdown *
.dropdown-content a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

/* Add a grey background color to dropdown links on hover *
.dropdown-content a:hover {
    background-color: #ddd;
}

/* Show the dropdown menu on hover /
.dropdown:hover .dropdown-content {
    display: block;
}

*/

